Move away from commercejs and s3 to airtable

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 BOT_TOKEN=
 STRIPE_TOKEN=
 STRIPE_API_KEY=
-COMMERCEJS_TOKEN=
 SENTRY_DSN=
 PYTHON_ENV=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-S3_BUCKET_NAME=
+AIRTABLE_API_KEY=
+AIRTABLE_BASE_ID=
